Refactor  book.controller.ts, add deleteBookCollection endpoint
